First controller and Razor pages tests.

--- a/SalesWebMvc/Pages/About.cshtml
+++ b/SalesWebMvc/Pages/About.cshtml
@@ -6,4 +6,7 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@Model.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>@Model.Aluno</p>
+<address>
+    <strong>More information: </strong> <a href="https://github.com/jadiaelmonteiro/SalesWebMvc">github.com/jadiaelmonteiro</a>
+</address>
